@@ -35,25 +35,26 @@
 		*/
 			$customer_nm = $_POST["cust_name"];
 			$customer_pw = $_POST["cust_password"];
-			$stmt = $connection->prepare("SELECT * FROM Customer WHERE cname=? and c_password=?");
+			$stmt = $connection->prepare("SELECT cname FROM Customer WHERE cname=? and c_password=?");
 			$stmt->bind_param("ss", $customer_nm, $customer_pw);
 			$stmt->execute();
+			
+			$stmt->bind_result($col1);
 		
 			if($stmt->error) {
-				printf("<b>Error: %s.</b>\n", $stmt->error);} 
+				printf("<b>Error: %s.</b>\n", $stmt->error);
+			} 
 			else{
-				if ($stmt->fetch()){
+				while ($stmt->fetch()){
 					/*header('Location: http://localhost/home.html');*/
-					echo "<b>Welcome ".$customer_nm."!</b>";
-					echo '<META http-equiv="refresh" content="1; http://localhost/home.html">';
-					exit;
-					}
-				else 
-					printf("Customer not in database.");}
-	   
-			$stmt->close();		
+					echo "<b>Welcome ".$col1."!</b>";
+					echo '<META http-equiv="refresh" content="1; http://localhost/amsonlineshop2.php">';
+					exit;}
 			}
+			$stmt->close();		
 		}
+	}
+		
 ?>
 <h2>Customer Login Menu</h2>
 	<form id="add" name="add" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
