@@ -8,3 +8,8 @@ Vojin
 -Added SignUp to the login page if the customer is not registered already
 -Made bookbiz be the css file for the login page
 -Changed name of index to home.html
+
+Vojin
+-Added the shopping page
+-Made successful login's get redirected to the shopping page instead of default home page
+-Added to bookbiz.css div tag for the headers and text boxes of amsonlineshop.php
